unpackaged/main/default/objects/litify_pm__Damage_Payment__c/litify_pm__Damage_Payment__c.object-meta.xml
<CustomObject>
    <label>Damage Payment</label>
    <nameField>
        <label>Damage Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Damage Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>