unpackaged/main/default/objects/litify_pm__Damage_Payment__c/fields/litify_pm__lit_Damage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Damage__c</fullName>
    <description>Parent of Payment</description>
    <label>Damage</label>
    <referenceTo>litify_pm__Damage__c</referenceTo>
    <relationshipLabel>Damage Payments</relationshipLabel>
    <relationshipName>Damage_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>