unpackaged/main/default/objects/litify_pm__Damage_Payment__c/fields/litify_pm__lit_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Date__c</fullName>
    <description>Date of Payment</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>