unpackaged/main/default/objects/litify_pm__Damage_Payment__c/fields/litify_pm__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Type__c</fullName>
    <description>Type of Payment</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>